@@ -4,13 +4,25 @@
 # License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 # Note : All ini files need to be saved as UTF-8 - No BOM
 
+JText::sprintf('Instr_Abort', JText::_('Instr_Error_Unknown_client_type'))
+JText::sprintf('Instr_Abort', JText::sprintf('Instr_Error_Unknown_client_type', $cname))
+
+INSTR_ABORT=Aborting language installation: %s
+INSTR_ERROR_CREATE_FOLDER_FAILED=Failed to create directory [%s]
+INSTR_ERROR_DEPRECATED_FORMAT=Deprecated install format (client="both"), use package installer in future
+INSTR_ERROR_FOLDER_IN_USE=Another extension is already using directory [%s]
+INSTR_ERROR_NO_LANGUAGE_TAG=The package did not specify a language tag. Are you trying to install an old language package?
+INSTR_ERROR_NO_CORE_LANGUAGE=No core pack exists for the language [%s]
+INSTR_ERROR_UNKNOWN_CLIENT_TYPE=Unknown Client Type [%s]
+
+# OLD STRING FORMAT (need conversions!)
+
 ADMIN=Admin
 ADMIN MODULES=Admin Modules
 ADMIN LANGUAGES=Admin Languages
 ADMIN TEMPLATES=Admin Templates
 ALL=All
 ALREADY EXISTS!=Already Exists!
-ANOTHER COMPONENT IS ALREADY USING DIRECTORY=Another Component is already using directory
 ANOTHER TEMPLATE IS ALREADY USING DIRECTORY=Another template is already using directory
 ANOTHER MODULE IS ALREADY USING DIRECTORY=Another module is already using directory
 AUTHOR=Author
@@ -85,10 +97,8 @@ METHOD "UNINSTALL" CANNOT BE CALLED BY CLASS=Method <strong>uninstall</strong> c
 MODULE FILE=Module
 MODULE=Module
 MODULES=Modules
-NO CORE PACK EXISTS FOR THE LANGUAGE=No core pack exists for the language
 NO CUSTOM MODULES INSTALLED=No custom Modules installed
 NO LANGUAGES INSTALLED=No Languages installed
-NO LANGUAGE TAG?=The package did not specify a language tag. Are you trying to install an old language package?
 NO INSTALLED TEMPLATES=No Templates installed
 NO INSTALL TYPE FOUND=No Install Type Found
 NO FILE IS MARKED AS PLUGIN FILE=No file is marked as Plug-in file
@@ -124,7 +134,6 @@ UNINSTALLEXT=Uninstall %s %s
 UNINSTALL LANGUAGE=If you uninstall this language, all your extensions' language files for this language will be permanently deleted and cannot be used anymore!
 UNINSTALLLANGPUBLISHEDALREADY=Cannot remove the default language
 UNKNOWN=Unknown
-UNKNOWN CLIENT TYPE=Unknown Client Type
 UNKNOWNARCHIVETYPE=Unknown Archive Type
 UNRECOVERABLE ERROR=Unrecoverable Error!
 UPLOAD ERROR=Upload %s - (Upload Error!)
